fix #0: fix background overflow color on dark theme

--- a/app/globals.css
+++ b/app/globals.css
@@ -20,7 +20,7 @@
   }
   body {
     color: #ebe4e4;
-    background: #292626;
+    background: #170d0d;
   }
 }
 
